--- a/.github/workflows/functional_macos.yaml
+++ b/.github/workflows/functional_macos.yaml
@@ -44,7 +44,7 @@ jobs:
         if: steps.cache-build.outputs.cache-hit != 'true'
         run: |
           mkdir -p build/cmake
-          cmake -S $(pwd) -B build/cmake -GNinja \
+          cmake -S $(pwd) -B build/cmake -GNinja -DCMAKE_BUILD_TYPE=RelWithDebInfo \
             -DCMAKE_PREFIX_PATH=${{github.workspace}}/qt_dist/lib/cmake
           cmake --build build/cmake -j$(nproc) --target dummyvpn
           cp ./build/cmake/tests/dummyvpn/dummyvpn build/
