--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,26 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
+    set(MZ_PLATFORM_NAME "linux")
+elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
+    set(MZ_PLATFORM_NAME "windows")
+elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
+    set(MZ_PLATFORM_NAME "macos")
+elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Android")
+    set(MZ_PLATFORM_NAME "android")
+elseif(${CMAKE_SYSTEM_NAME} STREQUAL "iOS")
+    set(MZ_PLATFORM_NAME "ios")
+elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Emscripten")
+    set(MZ_PLATFORM_NAME "wasm")
+endif()
+
+include(shared/sources.cmake)
+include(apps/vpn/cmake/sources.cmake)
+if(NOT CMAKE_CROSSCOMPILING)
+  include(apps/vpn/cmake/dummyvpn.cmake)
+endif()
+
 # For CMake versions prior to 3.19, we may need to perform manual
 # finalization in order to pick up QML dependencies when built
 # statically.
@@ -27,23 +47,6 @@ if(NOT ${CMAKE_SYSTEM_NAME} STREQUAL "Emscripten"
     )
 endif()
 
-if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
-    set(MZ_PLATFORM_NAME "linux")
-elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
-    set(MZ_PLATFORM_NAME "windows")
-elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
-    set(MZ_PLATFORM_NAME "macos")
-elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Android")
-    set(MZ_PLATFORM_NAME "android")
-elseif(${CMAKE_SYSTEM_NAME} STREQUAL "iOS")
-    set(MZ_PLATFORM_NAME "ios")
-elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Emscripten")
-    set(MZ_PLATFORM_NAME "wasm")
-endif()
-
-include(shared/sources.cmake)
-include(apps/vpn/cmake/sources.cmake)
-
 target_link_libraries(mozillavpn PRIVATE
     shared-sources
     mozillavpn-sources
@@ -63,10 +66,5 @@ include(apps/vpn/cmake/${MZ_PLATFORM_NAME}.cmake)
 if(NOT CMAKE_CROSSCOMPILING)
     target_compile_definitions(mozillavpn PUBLIC MVPN_WEBEXTENSION)
 endif()
-
-qt6_add_qml_module(mozillavpn
-  URI Mozilla.Shared.qmlcomponents
-  VERSION 1.0
-)
 
 qt_finalize_target(mozillavpn)
