--- a/.github/workflows/functional_macos.yaml
+++ b/.github/workflows/functional_macos.yaml
@@ -80,3 +80,57 @@ jobs:
           TEST_LIST: ${{ steps.testGen.outputs.tests }}
         run: |
           echo $TEST_LIST | jq
+
+  functionaltests:
+    name: Functional tests
+    needs:
+      - build_test_app
+    runs-on: macos-latest
+    timeout-minutes: 45
+    strategy:
+      fail-fast: false # Don't cancel other jobs if a test fails
+      matrix:
+        test: ${{ fromJson(needs.build_test_app.outputs.matrix) }}
+    steps:
+      - name: Clone repository
+        uses: actions/checkout@v3
+
+      - uses: actions/download-artifact@v3
+        with:
+          name: test-client-${{ github.sha }}
+          path: build/
+
+      - name: Install test dependecies
+        run: |
+          pip3 install -r requirements.txt
+          npm install
+
+      - name: Check build
+        shell: bash
+        run: |
+            chmod +x ./build/dummyvpn
+            ./build/dummyvpn -v
+
+      - name: Running ${{matrix.test.name}} Tests
+        id: runTests
+        uses: nick-invision/retry@v2
+        with:
+          timeout_minutes: 15
+          max_attempts: 3
+          command: |
+            export PATH=$GECKOWEBDRIVER:$(npm bin):$PATH
+            export HEADLESS=yes
+            export TZ=Europe/London
+            mkdir -p $ARTIFACT_DIR
+            npm run functionalTest --  --retries 3 ${{matrix.test.path}}
+        env:
+          ARTIFACT_DIR: ${{ runner.temp }}/artifacts
+          MVPN_BIN: ./build/dummyvpn
+          MVPN_ADDONS_PATH: ./build/addons
+
+      - name: Uploading artifacts
+        uses: actions/upload-artifact@v3
+        if: ${{ always() }}
+        with:
+          name: ${{matrix.test.name}} Logs
+          path: ${{ runner.temp }}/artifacts
