--- a/src/telemetry/metrics.yaml
+++ b/src/telemetry/metrics.yaml
@@ -38,6 +38,7 @@ impression:
       action:
         description: The type of action the user has performed
         type: string
+
   speed_test_result_completed:
     no_lint:
       - COMMON_PREFIX
@@ -59,6 +60,7 @@ impression:
       - vpn-telemetry@mozilla.com
     expires: never
     extra_keys: *impression_extra_keys
+
   speed_test_result_error:
     no_lint:
       - COMMON_PREFIX
@@ -80,6 +82,7 @@ impression:
       - vpn-telemetry@mozilla.com
     expires: never
     extra_keys: *impression_extra_keys
+
   connection_info_opened:
     type: event
     lifetime: ping
@@ -92,6 +95,105 @@ impression:
       - https://mozilla-hub.atlassian.net/browse/VPN-5366
     data_reviews:
       - https://github.com/mozilla-mobile/mozilla-vpn-client/pull/8060#issuecomment-1724272061
+    data_sensitivity:
+      - interaction
+    notification_emails:
+      - brizental@mozilla.com
+      - vpn-telemetry@mozilla.com
+    expires: never
+    extra_keys: *impression_extra_keys
+
+  signup_screen_view:
+    type: event
+    lifetime: ping
+    send_in_pings:
+      - main
+    description: |
+      The user has just moved on to the screen that has the
+      "Sign up" button
+    bugs:
+      - https://mozilla-hub.atlassian.net/browse/VPN-5251
+    data_reviews:
+      - https://github.com/mozilla-mobile/mozilla-vpn-client/pull/8060#issuecomment-1724272061
+    data_sensitivity:
+      - interaction
+    notification_emails:
+      - brizental@mozilla.com
+      - vpn-telemetry@mozilla.com
+    expires: never
+    extra_keys: *impression_extra_keys
+
+  enter_email_view:
+    type: event
+    lifetime: ping
+    send_in_pings:
+      - main
+    description: |
+      The user has just moved on to the sign up screen
+      where they are prompted for their email.
+    bugs:
+      - https://mozilla-hub.atlassian.net/browse/VPN-5251
+    data_reviews:
+      - https://github.com/mozilla-mobile/mozilla-vpn-client/pull/8060#issuecomment-1724272061
+    data_sensitivity:
+      - interaction
+    notification_emails:
+      - brizental@mozilla.com
+      - vpn-telemetry@mozilla.com
+    expires: never
+    extra_keys: *impression_extra_keys
+
+  authentication_inapp_step:
+    type: event
+    lifetime: ping
+    send_in_pings:
+      - main
+    description: |
+      The user has moved on to a new screen in the authentication flow.
+    bugs:
+      - https://mozilla-hub.atlassian.net/browse/VPN-5251
+    data_reviews:
+      - TODO
+    data_sensitivity:
+      - interaction
+    notification_emails:
+      - brizental@mozilla.com
+      - vpn-telemetry@mozilla.com
+    expires: never
+    extra_keys: *impression_extra_keys
+
+  sub_in_browser_screen_view:
+    type: event
+    lifetime: ping
+    send_in_pings:
+      - main
+    description: |
+      The user has moved on to the loading screen while processing
+      an in-browser subscription purchase.
+    bugs:
+      - https://mozilla-hub.atlassian.net/browse/VPN-5251
+    data_reviews:
+      - TODO
+    data_sensitivity:
+      - interaction
+    notification_emails:
+      - brizental@mozilla.com
+      - vpn-telemetry@mozilla.com
+    expires: never
+    extra_keys: *impression_extra_keys
+
+  confirming_sub_screen_view:
+    type: event
+    lifetime: ping
+    send_in_pings:
+      - main
+    description: |
+      The user has moved on to the loading screen while processing
+      an in-app subscription purchase.
+    bugs:
+      - https://mozilla-hub.atlassian.net/browse/VPN-5251
+    data_reviews:
+      - TODO
     data_sensitivity:
       - interaction
     notification_emails:
@@ -204,8 +306,299 @@ interaction:
     expires: never
     extra_keys: *interaction_extra_keys
 
+  get_help:
+    type: event
+    lifetime: ping
+    send_in_pings:
+      - main
+    description: |
+      The user has clicked the "Get help" button
+    bugs:
+      - https://mozilla-hub.atlassian.net/browse/VPN-5251
+    data_reviews:
+      - TODO
+    data_sensitivity:
+      - interaction
+    notification_emails:
+      - brizental@mozilla.com
+      - vpn-telemetry@mozilla.com
+    expires: never
+    extra_keys: *interaction_extra_keys
+
+  privacy_notice:
+    type: event
+    lifetime: ping
+    send_in_pings:
+      - main
+    description: |
+      The user has clicked the "Privacy Notice" button
+    bugs:
+      - https://mozilla-hub.atlassian.net/browse/VPN-5251
+    data_reviews:
+      - TODO
+    data_sensitivity:
+      - interaction
+    notification_emails:
+      - brizental@mozilla.com
+      - vpn-telemetry@mozilla.com
+    expires: never
+    extra_keys: *interaction_extra_keys
+
+  terms_of_service:
+    type: event
+    lifetime: ping
+    send_in_pings:
+      - main
+    description: |
+      The user has clicked the "Terms of Service" button
+    bugs:
+      - https://mozilla-hub.atlassian.net/browse/VPN-5251
+    data_reviews:
+      - TODO
+    data_sensitivity:
+      - interaction
+    notification_emails:
+      - brizental@mozilla.com
+      - vpn-telemetry@mozilla.com
+    expires: never
+    extra_keys: *interaction_extra_keys
+
+  auth_verification_code_resend:
+    type: event
+    lifetime: ping
+    send_in_pings:
+      - main
+    description: |
+      The user has clicked the "Resend code" button
+    bugs:
+      - https://mozilla-hub.atlassian.net/browse/VPN-5251
+    data_reviews:
+      - TODO
+    data_sensitivity:
+      - interaction
+    notification_emails:
+      - brizental@mozilla.com
+      - vpn-telemetry@mozilla.com
+    expires: never
+    extra_keys: *interaction_extra_keys
+
+  onboarding_cta_click:
+    type: event
+    lifetime: ping
+    send_in_pings:
+      - main
+    description: |
+      User initiates authentication process from mobile onboarding
+    bugs:
+      - https://github.com/mozilla-mobile/mozilla-vpn-client/pull/2545
+      - https://mozilla-hub.atlassian.net/browse/VPN-5251
+    data_reviews:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1759345
+      - TODO
+    data_sensitivity:
+      - interaction
+    notification_emails:
+      - brizental@mozilla.com
+      - vpn-telemetry@mozilla.com
+    expires: never
+    extra_keys: *interaction_extra_keys
+
+  authentication_aborted:
+    type: event
+    lifetime: ping
+    send_in_pings:
+      - main
+    description: |
+      The user has aborted the authentication flow.
+    bugs:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1711123
+      - https://mozilla-hub.atlassian.net/browse/VPN-5251
+    data_reviews:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1711123#c1
+      - TODO
+    data_sensitivity:
+      - interaction
+    notification_emails:
+      - brizental@mozilla.com
+      - vpn-telemetry@mozilla.com
+    expires: never
+    extra_keys: *interaction_extra_keys
+
+  authentication_inapp_step:
+    type: event
+    lifetime: ping
+    send_in_pings:
+      - main
+    description: |
+      The user has advanced in the authentication flow.
+    bugs:
+      - https://github.com/mozilla-mobile/mozilla-vpn-client/issues/2956
+      - https://mozilla-hub.atlassian.net/browse/VPN-5251
+    data_reviews:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1759345
+      - TODO
+    data_sensitivity:
+      - interaction
+    notification_emails:
+      - brizental@mozilla.com
+      - vpn-telemetry@mozilla.com
+    expires: never
+    extra_keys: *interaction_extra_keys
+
+  auth_password_reset_request:
+    type: event
+    lifetime: ping
+    send_in_pings:
+      - main
+    description: |
+      The user clicked on the "Forgot your password?" button.
+    bugs:
+      - https://mozilla-hub.atlassian.net/browse/VPN-5251
+    data_reviews:
+      - TODO
+    data_sensitivity:
+      - interaction
+    notification_emails:
+      - brizental@mozilla.com
+      - vpn-telemetry@mozilla.com
+    expires: never
+    extra_keys: *interaction_extra_keys
+
 # "outcome" category metrics record the outcome of some user action
 outcome:
+  login_started:
+    type: event
+    lifetime: ping
+    send_in_pings:
+      - main
+    description: |
+      The user has kick started the login. This metric
+      is recorded on the back end of the application as it starts
+      processing the user's password input.
+    bugs:
+      - https://mozilla-hub.atlassian.net/browse/VPN-5251
+    data_reviews:
+      - TODO
+    data_sensitivity:
+      - interaction
+    notification_emails:
+      - brizental@mozilla.com
+      - vpn-telemetry@mozilla.com
+    expires: never
+    extra_keys: &outcome_extra_key
+      outcome:
+        description: The outcome of a given feature
+        type: string
+
+  login_ended:
+    type: event
+    lifetime: ping
+    send_in_pings:
+      - main
+    description: |
+      Login has ended _successfully_. This is also
+      a backend event recorded after all steps of the login
+      flow are done, including processing of 2FA verification codes.
+    bugs:
+      - https://mozilla-hub.atlassian.net/browse/VPN-5251
+    data_reviews:
+      - TODO
+    data_sensitivity:
+      - interaction
+    notification_emails:
+      - brizental@mozilla.com
+      - vpn-telemetry@mozilla.com
+    expires: never
+    extra_keys: *outcome_extra_key
+
+  two_fa_verification_failed:
+    type: event
+    lifetime: ping
+    send_in_pings:
+      - main
+    description: |
+      Two-factor authentication has failed
+    bugs:
+      - https://mozilla-hub.atlassian.net/browse/VPN-5251
+    data_reviews:
+      - TODO
+    data_sensitivity:
+      - interaction
+    notification_emails:
+      - brizental@mozilla.com
+      - vpn-telemetry@mozilla.com
+    expires: never
+    extra_keys:
+      <<: *outcome_extra_key
+      type:
+        description: The type of 2FA authentication. Either "totp", "email" or "unblock_code".
+        type: string
+
+  two_fa_verification_succeeded:
+    type: event
+    lifetime: ping
+    send_in_pings:
+      - main
+    description: |
+      Two-factor authentication has succeeded
+    bugs:
+      - https://mozilla-hub.atlassian.net/browse/VPN-5251
+    data_reviews:
+      - TODO
+    data_sensitivity:
+      - interaction
+    notification_emails:
+      - brizental@mozilla.com
+      - vpn-telemetry@mozilla.com
+    expires: never
+    extra_keys:
+      <<: *outcome_extra_key
+      type:
+        description: The type of 2FA authentication. Either "totp", "email" or "unblock_code".
+        type: string
+
+  registration_started:
+    type: event
+    lifetime: ping
+    send_in_pings:
+      - main
+    description: |
+      The user has kick started the registration process. This metric
+      is recorded on the back end of the application as it starts
+      processing the user's password input.
+    bugs:
+      - https://mozilla-hub.atlassian.net/browse/VPN-5251
+    data_reviews:
+      - TODO
+    data_sensitivity:
+      - interaction
+    notification_emails:
+      - brizental@mozilla.com
+      - vpn-telemetry@mozilla.com
+    expires: never
+    extra_keys: *outcome_extra_key
+
+  registration_completed:
+    type: event
+    lifetime: ping
+    send_in_pings:
+      - main
+    description: |
+      Registration has completed _successfully_. This is also
+      a backend event recorded after all steps of the registration
+      flow are done, including processing of 2FA verification codes.
+    bugs:
+      - https://mozilla-hub.atlassian.net/browse/VPN-5251
+    data_reviews:
+      - TODO
+    data_sensitivity:
+      - interaction
+    notification_emails:
+      - brizental@mozilla.com
+      - vpn-telemetry@mozilla.com
+    expires: never
+    extra_keys: *outcome_extra_key
+
   speed_test_completed:
     type: event
     lifetime: ping
@@ -227,14 +620,31 @@ outcome:
       - vpn-telemetry@mozilla.com
     expires: never
     extra_keys:
+      <<: *outcome_extra_key
       speed:
         description: |
           The speed bucket that the test resulted in, or if problem occurred:
           Slow | Medium | Fast | Cancelled | Error
         type: string
-      outcome: &outcome_extra_key
-        description: The outcome of a given feature
-        type: string
+
+  subscription_started:
+    type: event
+    lifetime: ping
+    send_in_pings:
+      - main
+    description: |
+      The user has kick started the subscription process.
+    bugs:
+      - https://mozilla-hub.atlassian.net/browse/VPN-5251
+    data_reviews:
+      - TODO
+    data_sensitivity:
+      - interaction
+    notification_emails:
+      - brizental@mozilla.com
+      - vpn-telemetry@mozilla.com
+    expires: never
+    extra_keys: *outcome_extra_key
 
 sample:
   addon_cta_clicked:
@@ -394,31 +804,6 @@ sample:
         type: string
       message:
         description: Extra error message
-        type: string
-
-  authentication_inapp_step:
-    type: event
-    lifetime: ping
-    send_in_pings:
-      - main
-    description: |
-      The user has advanced in the authentication flow.
-    bugs:
-      - https://github.com/mozilla-mobile/mozilla-vpn-client/issues/2956
-    data_reviews:
-      - https://bugzilla.mozilla.org/show_bug.cgi?id=1759345
-    data_sensitivity:
-      - interaction
-    notification_emails:
-      - amarchesini@mozilla.com
-      - vpn-telemetry@mozilla.com
-    expires: never
-    extra_keys:
-      state:
-        description: |
-          The name of the authentication state, e.g. "sign-in", "sign-out",
-          "totp", etc. The list of states can be found in
-          `authenticationinapp.h`.
         type: string
 
   authentication_sub_manage_step:
@@ -950,24 +1335,6 @@ sample:
       - vpn-telemetry@mozilla.com
     expires: never
 
-  authentication_aborted:
-    type: event
-    lifetime: ping
-    send_in_pings:
-      - main
-    description: |
-      The user has aborted the authentication flow.
-    bugs:
-      - https://bugzilla.mozilla.org/show_bug.cgi?id=1711123
-    data_reviews:
-      - https://bugzilla.mozilla.org/show_bug.cgi?id=1711123#c1
-    data_sensitivity:
-      - interaction
-    notification_emails:
-      - amarchesini@mozilla.com
-      - vpn-telemetry@mozilla.com
-    expires: never
-
   authentication_completed:
     type: event
     lifetime: ping
@@ -1117,42 +1484,6 @@ sample:
       - vpn-telemetry@mozilla.com
     expires: never
 
-  get_help_clicked_initialize:
-    type: event
-    lifetime: ping
-    send_in_pings:
-      - main
-    description: |
-      The user has clicked "Get help" from the initial view.
-    bugs:
-      - https://bugzilla.mozilla.org/show_bug.cgi?id=1711123
-    data_reviews:
-      - https://bugzilla.mozilla.org/show_bug.cgi?id=1711123#c1
-    data_sensitivity:
-      - interaction
-    notification_emails:
-      - amarchesini@mozilla.com
-      - vpn-telemetry@mozilla.com
-    expires: never
-
-  get_help_clicked_view_settings:
-    type: event
-    lifetime: ping
-    send_in_pings:
-      - main
-    description: |
-      The user has clicked "Get help" from the settings view
-    bugs:
-      - https://bugzilla.mozilla.org/show_bug.cgi?id=1711123
-    data_reviews:
-      - https://bugzilla.mozilla.org/show_bug.cgi?id=1711123#c1
-    data_sensitivity:
-      - interaction
-    notification_emails:
-      - amarchesini@mozilla.com
-      - vpn-telemetry@mozilla.com
-    expires: never
-
   manage_account_clicked:
     type: event
     lifetime: ping
@@ -1206,34 +1537,6 @@ sample:
       - amarchesini@mozilla.com
       - vpn-telemetry@mozilla.com
     expires: never
-
-  onboarding_cta_click:
-    type: event
-    lifetime: ping
-    send_in_pings:
-      - main
-    description: |
-      User initiates authentication process from mobile onboarding
-    bugs:
-      - https://github.com/mozilla-mobile/mozilla-vpn-client/pull/2545
-    data_reviews:
-      - https://bugzilla.mozilla.org/show_bug.cgi?id=1759345
-    data_sensitivity:
-      - interaction
-    expires: never
-    extra_keys:
-      panel_id:
-        description: Panel content identifier
-        type: string
-      panel_idx:
-        description: Panel position in onboarding stack
-        type: string
-      panel_cta:
-        description: Element that was clicked to trigger auth
-        type: string
-    notification_emails:
-      - amarchesini@mozilla.com
-      - vpn-telemetry@mozilla.com
 
   settings_view_opened:
     type: event
@@ -1353,24 +1656,6 @@ sample:
           The sku of the started Subscription
         type: string
 
-  iap_restore_sub_started:
-    type: event
-    lifetime: ping
-    send_in_pings:
-      - main
-    description: |
-      The user has started the subscription flow in app
-    bugs:
-      - https://github.com/mozilla-mobile/mozilla-vpn-client/issues/2956
-    data_reviews:
-      - https://bugzilla.mozilla.org/show_bug.cgi?id=1759345
-    data_sensitivity:
-      - interaction
-    notification_emails:
-      - amarchesini@mozilla.com
-      - vpn-telemetry@mozilla.com
-    expires: never
-
   iap_subscription_failed:
     type: event
     lifetime: ping
@@ -1387,10 +1672,11 @@ sample:
     data_sensitivity:
       - interaction
     notification_emails:
-      - amarchesini@mozilla.com
+      - brizental@mozilla.com
       - vpn-telemetry@mozilla.com
     expires: never
     extra_keys:
+      <<: *interaction_extra_keys
       error:
         description: |
           The reason of the failure. It can be "billing-not-available",
@@ -1407,24 +1693,47 @@ sample:
     send_in_pings:
       - main
     description: |
-      The user has completed the subscription flow in app
+      The user has completed the subscription flow in app _succesfully_.
     bugs:
       - https://github.com/mozilla-mobile/mozilla-vpn-client/issues/2956
       - https://github.com/mozilla-mobile/mozilla-vpn-client/issues/3754
+      - https://mozilla-hub.atlassian.net/browse/VPN-5251
     data_reviews:
       - https://bugzilla.mozilla.org/show_bug.cgi?id=1759345
       - https://bugzilla.mozilla.org/show_bug.cgi?id=1774433
+      - TODO
     data_sensitivity:
       - interaction
     notification_emails:
-      - amarchesini@mozilla.com
+      - brizental@mozilla.com
       - vpn-telemetry@mozilla.com
     expires: never
     extra_keys:
+      <<: *outcome_extra_key
       sku:
         description: |
           The sku of the completed Subscription
         type: string
+
+  iap_restore_sub_started:
+    type: event
+    lifetime: ping
+    send_in_pings:
+      - main
+    description: |
+      The user has clicked the "Already a subscriber?" button on
+      the "Subscribe now" screen.
+    bugs:
+      - https://github.com/mozilla-mobile/mozilla-vpn-client/issues/2956
+    data_reviews:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1759345
+    data_sensitivity:
+      - interaction
+    notification_emails:
+      - brizental@mozilla.com
+      - vpn-telemetry@mozilla.com
+    expires: never
+    extra_keys: *interaction_extra_keys
 
   connectivity_handshake_timeout:
     type: event
@@ -1529,7 +1838,7 @@ sample:
       - vpn-telemetry@mozilla.com
     expires: never
     extra_keys:
-      <<: *impression_extra_keys
+      <<: *interaction_extra_keys
       state:
         description: |
           The name of the app state, e.g. "authenticating", "device-limit",
