--- a/.github/workflows/test_unit.yaml
+++ b/.github/workflows/test_unit.yaml
@@ -198,3 +198,15 @@ jobs:
         working-directory: ./build
         run: |
           ctest --output-on-failure
+
+  rust-unit-tests:
+    runs-on: ubuntu-22.04
+    name: Run Unit tests for Rust
+    steps:
+      - name: Clone repository
+        uses: actions/checkout@v3
+
+      - name: Signature library tests
+        shell: bash
+        working-directory: ./signature
+        run: cargo test -- --nocapture
